<menu xmlns:android="http://schemas.android.com/apk/res/android" >

<!--  Menu element for changing background -->
        <item android:title="@string/change_background" android:id="@+id/change_background">            <!-- Submenu with different background pictures -->
            <menu>
                <group android:id="@+id/submenu_changeBackground" >
                <item
                    android:id="@+id/water"
                    android:title="@string/water_picture"/>
                	
                <item
                    android:id="@+id/sky"
                    android:title="@string/sky_picture"/>
                <item android:id="@+id/th_picture" android:title="@string/th_picture"/>
                </group>
            </menu>
        </item>
        <!--  Menu element for switching between different modes-->
    <item
        android:id="@+id/change_mode"
        android:title="@string/select_mode">
        <menu>
             <group android:id="@+id/submenu_changeMode" >
            <!-- Switch to normal remote control -->
            <item
                android:id="@+id/mode_buttons"
                android:title="@string/mode_buttons"/>
            <!--  Switch to control AirSwimmer via shaking target -->
            <item
                android:id="@+id/mode_tilt"
                android:title="@string/mode_tilt"/>
            <!--  Switch to control AirSwimmer via sliding fish on screen -->
            <item
                android:id="@+id/mode_slide"
                android:title="@string/mode_slide"/>
            
            </group>
        </menu>
    </item>
    <item android:id="@+id/change_move_buttons" android:title="@string/change_move">
        <menu>
            <group android:id="@+id/submenu_changeMove">
                <item android:id="@+id/permanent" android:title="@string/permanent"/><item
                android:id="@+id/single"
                android:title="@string/single"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/back_to_start" android:id="@+id/frontPage"/>            <!--return to frontpage -->

</menu>